Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77771

A Double click on QtreeView/QTreeWidget index is emitting two clicked() and one doubleClicked() signal

XMLWordPrintable

    • Windows
    • d6551fe125209f11445936a90ce2a4207a183917 (qt/qtbase/dev)

      If there is a slot connected to both clicked() and doubleclicked() signal, and user double clicks on QtreeView, it is emitting two clicked() and one doubleClicked() signal.
      Ideally, there should be only one signal for doubleClick.
      Please find the attached sample, upon a double click, output can be seen as:

      Inside TreeModel::Slot for Single click 
      Inside TreeModel::Slot for double click 
      Inside TreeModel::Slot for Single click 
      

        1. qtbug77771.zip
          3 kB
          Shveta Mittal
        2. qtbug77771_workaround.zip
          3 kB
          André De La Rocha
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            shmittal Shveta Mittal
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes